--- a/Resources/views/Default/_cart.html.twig
+++ b/Resources/views/Default/_cart.html.twig
@@ -1,6 +1,6 @@
 
 
-{% include "MaciOrderBundle:Default:_show.html.twig" with { 'order': cart, 'edit': true } %}
+{{ render(controller('MaciOrderBundle:Default:showOrder', {'order': cart, 'edit': true})) }}
 
 
 {% if cart and cart.items|length %}
