--- a/Resources/views/Default/_invoice.html.twig
+++ b/Resources/views/Default/_invoice.html.twig
@@ -56,7 +56,7 @@
 
 			<h4>Pay To:</h4>
 
-			{% include "MaciPageBundle:Default:_contacts.html.twig" } %}
+			{% include "MaciPageBundle:Default:_contacts.html.twig" %}
 
 		</td>
 	</tr>
