--- a/Resources/views/Email/confirmation_email.html.twig
+++ b/Resources/views/Email/confirmation_email.html.twig
@@ -1,73 +1,160 @@
 <html>
-<body leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0" bgcolor='#fff' font-family='Gill Sans'>
-<table width="100%" cellpadding="10" cellspacing="0">
+<head>
+<style type="text/css">
+
+body {
+	background-color: #e6e6e6;
+	font-family: 'Gill Sans';
+	margin: 0;
+}
+
+table {
+	margin: 0;
+	padding: 0;
+	text-align: left;
+}
+
+.main {
+	background-color: #fff;
+	margin: 0 auto;
+	padding: 0 20px;
+	width: 600px;
+}
+
+.main > tbody > tr > td {
+	padding: 10px 0;
+}
+
+td > table {
+	width: 100%;
+}
+
+</style>
+</head>
+<body>
+<table class="main">
+<tbody>
 
 <tr>
-<td>
+	<td class="header">
 
-	<h1>Thank you for your Order!</h1>
-	<h2>Your order has been confirmed.</h2>
-	<span>Order Id: {{ order.name }}</span>
+		<table>
+			<tr>
+				<td class="logo">
+					<img src="{{ asset('/images/logo.png', null, true) }}" />
+				</td>
+				<td class="title">
+					<h1>{{ company_title }}</h1>
+				</td>
+			</tr>
+		</table>
 
-</td>
+	</td>
 </tr>
 
 
-{% if order.billingAddress is not null %}
-
 <tr>
-<td>
-
-	<h3>Payment Address:</h3>
-
-	{% include "MaciAddressBundle:Default:_item.html.twig" with { 'address': order.billingAddress } %}
-
-</td>
+	<td class="order-status">
+		<h4>Dear Customer,</h4>
+		<p>you order has been confirmed.</p>
+		<span>Order Code: {{ order.code }}</span><br/>
+		<span>Order Status: {{ order.statusLabel }}</span>
+	</td>
 </tr>
 
-{% endif %}
+
+{#% if order.billingAddress is not null %}
+
+<tr>
+	<td class="address">
+		<h3>Payment Address:</h3>
+		{% include "MaciAddressBundle:Default:_item.html.twig" with { 'address': order.billingAddress } %}
+	</td>
+</tr>
+
+{% endif %#}
 
 
 {% if order.shippingAddress is not null %}
 
 <tr>
-<td>
-
-	<h3>Shipping Address:</h3>
-
-	{% include "MaciAddressBundle:Default:_item.html.twig" with { 'address': order.shippingAddress } %}
-
-</td>
+	<td class="address">
+		<h3>Shipping Address:</h3>
+		{% include "MaciAddressBundle:Default:_item.html.twig" with { 'address': order.shippingAddress } %}
+	</td>
 </tr>
 
 {% endif %}
 
 
 <tr>
-<td>
+<td class="details">
 
 	<h3>Order Details:</h3>
 
 	<table>
 
-		{% for item in order.items %}
+		{# HEADER #}
 		<tr>
-			<td>{{ item.product }}</td>
+			<td>&nbsp;</td>
+			<th>Product</th>
+			<th>Quantity</th>
+			<th>Price</th>
+		</tr>
+
+		{# ORDER ITEMS #}
+		{% for item in order.items %}
+		{% if item.product %}
+		<tr>
 			<td>
+				{% if item.product.preview %}
+				<img src="{{ asset(item.product.preview.webPreview | imagine_filter('maci_product_preview_list'), null, true) }}">
+				{% else %}
+				<img src="{{ asset('/images/defaults/no-icon.png' | imagine_filter('maci_product_preview_list'), null, true) }}">
+				{% endif %}
+			</td>
+			<td>
+				{{ item.product }}<br/>
 				{% for variant in item.variants %}
-				{{ variant }}<br/>
+				<span>{{ variant }}</span>
 				{% endfor %}
 			</td>
-			<td>{{ item.quantity }}</td>
-			<td>{{ item.amount }} &euro;</td>
+			<td>
+				{{ item.quantity }}
+			</td>
+			<td>
+				{{ item.amount | number_format(2, '.', ',') }} &euro;
+			</td>
 		</tr>
+		{% endif %}
 		{% endfor %}
 
+		{# SHIPPING COST #}
+		{% if order.checkShipment and order.shippingCost %}
 		<tr>
+			<td>&nbsp;</td>
+			<td>Shipping Cost:</td>
+			<td>&nbsp;</td>
+			<td>{{ order.shippingCost | number_format(2, '.', ',') }} &euro;</td>
+		</tr>
+		{% endif %}
+
+		{# PAYMENT COST #}
+		{% if order.paymentCost %}
+		<tr>
+			<td>&nbsp;</td>
+			<td>Payment Cost:</td>
+			<td>&nbsp;</td>
+			<td>{{ order.paymentCost | number_format(2, '.', ',') }} &euro;</td>
+		</tr>
+		{% endif %}
+
+
+		<tr>
+			<td>&nbsp;</td>
 			<td>Amount:</td>
 			<td>&nbsp;</td>
-			<td>&nbsp;</td>
-			<td>{{ order.amount }} &euro;</td>
+			<td>{{ order.amount | number_format(2, '.', ',') }} &euro;</td>
 		</tr>
 
 	</table>
@@ -79,25 +166,22 @@
 {% if order.orderDocuments|length %}
 
 <tr>
-<td>
-
-	<h3>E-Books:</h3>
-
-	{% if order.user %}
-	<table>
-		{% for item in order.orderDocuments %}
-		<tr>
-			<td>- {{ item }}</td>
-			<td><a href="{{ path('maci_media_get', {'path': item.path}) }}">Get E-Book</a></td>
-		</tr>
-		{% endfor %}
-	</table>
-	<p>You can see all your ebooks in <a href="{{ path('maci_user_library') }}">Your Library</a></p>
-	{% else %}
-	<p>Contact us to get the ebooks.</p>
-	{% endif %}
-
-</td>
+	<td>
+		<h3>E-Books:</h3>
+		{% if order.user %}
+		<table>
+			{% for item in order.orderDocuments %}
+			<tr>
+				<td>- {{ item }}</td>
+				<td><a href="{{ path('maci_media_get', {'path': item.path}) }}">Get E-Book</a></td>
+			</tr>
+			{% endfor %}
+		</table>
+		<p>You can see all your ebooks in <a href="{{ path('maci_user_library') }}">Your Library</a></p>
+		{% else %}
+		<p>You can find your ebooks attached to this mail.</p>
+		{% endif %}
+	</td>
 </tr>
 
 {% endif %}
@@ -113,7 +197,7 @@
 </td>
 </tr>
 
-
+</tbody>
 </table>
 </body>
 </html>
