--- a/Resources/views/Default/gocheckout.html.twig
+++ b/Resources/views/Default/gocheckout.html.twig
@@ -11,7 +11,15 @@
 
 {% block container %}
 
-{% include "MaciOrderBundle:Default:_gocheckout.html.twig" with {} %}
+
+{% if registration_required %}
+
+{% include "MaciOrderBundle:Default:_gocheckout_signup.html.twig" %}
+
+{% else %}
+
+{% include "MaciOrderBundle:Default:_gocheckout.html.twig" %}
+
 
 {% endblock %}
 
