--- a/Resources/views/Default/_checkout.html.twig
+++ b/Resources/views/Default/_checkout.html.twig
@@ -50,17 +50,17 @@
 
 	<h4>{{ i }} - {{ 'page.checkout.billing' | matra('Billing') }}</h4>
 
-	{% render(controller('MaciAddressBundle:Default:list', { 'select': path('maci_order_checkout_set_address', {'option': 'billing'}) } )) %}
+	{% render(controller('MaciOrderBundle:Default:cartSetBillingAddress')) %}
 
 	<br/><br/>
 
 	{% if not order.checkShipment or order.checkout == 'pickup' or order.checkout == 'booking' or order.shippingAddress is not null %}
 
-	{% render(controller('MaciAddressBundle:Default:form', {'id': null, 'method': path('maci_order_checkout_set_address', {'option': 'billing'})})) %}
+	{% render(controller('MaciAddressBundle:Default:form', {'id': null, 'method': 'billing'} )) %}
 
 	{% else %}
 
-	{%
+	{#%
 		render(controller('MaciAddressBundle:Default:form', {
 			'id': null,
 			'method': {
@@ -68,7 +68,9 @@
 				'The Billing Address is different from that of Shipment.': path('maci_order_checkout_set_address', {'option': 'billing'})
 			}
 		} ))
-	%}
+	%#}
+
+	{% render(controller('MaciAddressBundle:Default:form', {'id': null, 'method': 'billing'} )) %}
 
 	{% endif %}
 
@@ -108,11 +110,11 @@
 
 	<h4>{{ i }} - {{ 'page.checkout.shipping' | matra('Shipping Address') }}</h4>
 
-	{% render(controller('MaciAddressBundle:Default:list', { 'select': path('maci_order_checkout_set_address', {'option': 'shipping'}) } )) %}
+	{% render(controller('MaciOrderBundle:Default:cartSetShippingAddress')) %}
 
 	<br/><br/>
 
-	{% render(controller('MaciAddressBundle:Default:form', {'id': null, 'method': path('maci_order_checkout_set_address', {'option': 'shipping'})})) %}
+	{% render(controller('MaciAddressBundle:Default:form', {'id': null, 'method': 'shipping'} )) %}
 
 </section>
 
