--- a/Resources/views/Email/confirmation_email.html.twig
+++ b/Resources/views/Email/confirmation_email.html.twig
@@ -163,7 +163,7 @@ td > table {
 </tr>
 
 
-{% if order.orderDocuments|length %}
+{% if order.orderDocuments|length and 3 < order.progression %}
 
 <tr>
 	<td>
@@ -179,7 +179,7 @@ td > table {
 		</table>
 		<p>You can see all your ebooks in <a href="{{ path('maci_user_library') }}">Your Library</a></p>
 		{% else %}
-		<p>You can find your ebooks attached to this mail.</p>
+		<p>You should find your ebooks attached to this mail. If not, contact us.</p>
 		{% endif %}
 	</td>
 </tr>
