--- a/Resources/views/Default/_confirmed.html.twig
+++ b/Resources/views/Default/_confirmed.html.twig
@@ -5,20 +5,28 @@
 		<span>Id</span>
 	</div>
 
-	<div class="col-xs-3">
+	<div class="col-xs-2">
 		<span>Name</span>
 	</div>
 
-	<div class="col-xs-3">
+	<div class="col-xs-2">
 		<span>User</span>
 	</div>
 
-	<div class="col-xs-2">
+	<div class="col-xs-1">
 		<span>Status</span>
 	</div>
 
-	<div class="col-xs-3">
+	<div class="col-xs-2">
+		<span>Amount</span>
+	</div>
+
+	<div class="col-xs-2">
 		<span>Invoice</span>
+	</div>
+
+	<div class="col-xs-2">
+		<span>Actions</span>
 	</div>
 
 </header>
@@ -31,20 +39,28 @@
 		{{ item.id }}
 	</div>
 
-	<div class="col-xs-3">
+	<div class="col-xs-2">
 		{{ item.name }}
 	</div>
 
-	<div class="col-xs-3">
+	<div class="col-xs-2">
 		{{ item.user }}
 	</div>
 
-	<div class="col-xs-2">
+	<div class="col-xs-1">
 		{{ item.status }}
 	</div>
 
-	<div class="col-xs-3">
+	<div class="col-xs-2">
+		{{ item.amount }} EUR
+	</div>
+
+	<div class="col-xs-2">
 		{{ item.invoice|date('d/m/Y') }}
+	</div>
+
+	<div class="col-xs-2">
+		<a href="{{ path('maci_order_admin_show_order', {'id': item.id}) }}" class="btn btn-default">Show</a>
 	</div>
 
 </div>
