--- a/Resources/views/Default/show.html.twig
+++ b/Resources/views/Default/show.html.twig
@@ -12,31 +12,9 @@
 {% block content %}
 
 
-<h3>{{ order.name }}</h3>
-
-<div class="row">
-
-<div class="col-xs-12 col-sm-6">
-
-	<h4>Shipping Address:</h4>
-
-	{% include "MaciAddressBundle:Default:_item.html.twig" with { 'address': order.shippingAddress } %}
-
-</div>
-
-
-<div class="col-xs-12 col-sm-6">
-
-	<h4>Payment Address:</h4>
-
-	{% include "MaciAddressBundle:Default:_item.html.twig" with { 'address': order.billingAddress } %}
-
-</div>
-
-</div>
-
-
 {% include "MaciOrderBundle:Default:_show.html.twig" with { 'order': order, 'edit': edit } %}
+
+{% include "MaciOrderBundle:Default:_show_addresses.html.twig" with { 'order': order } %}
 
 
 {% endblock %}
