--- a/Resources/views/Default/_checkout.html.twig
+++ b/Resources/views/Default/_checkout.html.twig
@@ -210,6 +210,8 @@
 
 	<h4>{{ i }} - {{ 'page.checkout.confirm' | matra('Confirm Order') }}</h4>
 
+	<p id="checkout_confirm_text">{{ 'page.checkout.confirm_text' | matra('') }}</p>
+
 	<a href="{{ path('maci_order_checkout_confirm') }}" class="btn btn-primary">{{ 'page.checkout.confirm' | matra('Confirm Order') }}</a>
 
 </section>
