--- a/Resources/views/Default/_confirmed.html.twig
+++ b/Resources/views/Default/_confirmed.html.twig
@@ -14,18 +14,18 @@
 	</div>
 
 	<div class="col-xs-1">
-		<span>Status</span>
-	</div>
-
-	<div class="col-xs-2">
-		<span>Amount</span>
-	</div>
-
-	<div class="col-xs-2">
 		<span>Invoice</span>
 	</div>
 
-	<div class="col-xs-2">
+	<div class="col-xs-1">
+		<span>Status</span>
+	</div>
+
+	<div class="col-xs-1">
+		<span>Amount</span>
+	</div>
+
+	<div class="col-xs-4">
 		<span>Actions</span>
 	</div>
 
@@ -36,31 +36,32 @@
 <div class="row">
 
 	<div class="col-xs-1">
-		{{ item.id }}
+		<span>{{ item.id }}</span>
 	</div>
 
 	<div class="col-xs-2">
-		{{ item.name }}
+		<a href="{{ path('maci_order_admin_show_order', {'id': item.id}) }}">{{ item.name }}</a>
 	</div>
 
 	<div class="col-xs-2">
-		{{ item.user }}
+		<span>{{ item.user }}</span>
 	</div>
 
 	<div class="col-xs-1">
-		{{ item.status }}
+		<span>{{ item.invoice|date('d/m/Y') }}</span>
 	</div>
 
-	<div class="col-xs-2">
-		{{ item.amount }} EUR
+	<div class="col-xs-1">
+		<span>{{ item.status }}</span>
 	</div>
 
-	<div class="col-xs-2">
-		{{ item.invoice|date('d/m/Y') }}
+	<div class="col-xs-1">
+		<span>{{ item.amount }} EUR</span>
 	</div>
 
-	<div class="col-xs-2">
+	<div class="col-xs-4">
 		<a href="{{ path('maci_order_admin_show_order', {'id': item.id}) }}" class="btn btn-default">Show</a>
+		<a href="{{ path('maci_admin_entity_remove', {'entity': 'order', 'id': item.id, 'redirect': 'maci_order_admin_confirmed'}) }}" class="btn btn-danger">Remove</a>
 	</div>
 
 </div>
