--- a/Resources/views/Default/_show.html.twig
+++ b/Resources/views/Default/_show.html.twig
@@ -17,20 +17,16 @@
 
 <div class="row">
 
-	<div class="col-xs-4">
-		<span class="order-show-title">{{ 'product.item_name' | matra('Product Name') }}</span>
+	<div class="col-xs-12 col-sm-6">
+		<h4 class="order-show-title">{{ 'product.cart_title' | matra('') }}</h4>
 	</div>
 
-	<div class="col-xs-3">
-		<span class="order-show-title">{{ 'product.variants' | matra('Variants') }}</span>
+	<div class="col-xs-4 col-sm-2">
+		<h4 class="order-show-title">{{ 'product.price' | matra('Price') }}</h4>
 	</div>
 
-	<div class="col-xs-4">
-		<span class="order-show-title">{{ 'product.quantity' | matra('Quantity') }}</span>
-	</div>
-
-	<div class="col-xs-1">
-		<span class="order-show-title">{{ 'product.price' | matra('Price') }}</span>
+	<div class="col-xs-8 col-sm-4">
+		<h4 class="order-show-title">{{ 'product.quantity' | matra('Quantity') }}</h4>
 	</div>
 
 </div>
@@ -46,19 +42,21 @@
 
 <div class="row">
 
-	<div class="col-xs-4">
+	<div class="col-xs-4 col-sm-2">
 
-		{% if edit is defined and edit %}
-		<a class="order-item-name" href="{{ path('maci_product_show', { 'id': item.product.id }) }}">
-			{{ item.product }}
-		</a>
-		{% else %}
-		<span class="order-item-name">{{ item.product }}</span>
-		{% endif %}
+		<img class="img-responsive" src="{{ asset(item.product.preview.webPath | imagine_filter('maci_product_preview_cart')) }}" {% if item.product.description %} title="{{ item.product }}" alt="{{ item.product.description }}" {% else %} alt="{{ item.product }}" {% endif %} />
 
 	</div>
 
-	<div class="col-xs-3">
+	<div class="col-xs-8 col-sm-4">
+
+		{% if edit is defined and edit %}
+		<a href="{{ path('maci_product_show', { 'id': item.product.id }) }}">
+			<h4 class="order-item-name">{{ item.product }}</h4>
+		</a>
+		{% else %}
+		<h4 class="order-item-name">{{ item.product }}</h4>
+		{% endif %}
 
 		{% for variant in item.variants %}
 		{% if variant.parent %}
@@ -70,19 +68,19 @@
 
 	</div>
 
-	<div class="col-xs-4">
+	<div class="col-xs-4 col-sm-2">
+		<span class="order-item-amount">
+			{{ item.amount | number_format(2, '.', ',') }} &euro;
+		</span>
+	</div>
+
+	<div class="col-xs-8 col-sm-4">
 		{% if edit is defined and edit %}
 		{% render(controller('MaciOrderBundle:Default:editCartItem', { 'id': id, 'quantity': item.quantity } )) %}
 		{% render(controller('MaciOrderBundle:Default:removeCartItem', { 'id': id } )) %}
 		{% else %}
 		<span class="order-item-quantity">{{ item.quantity }}</span>
 		{% endif %}
-	</div>
-
-	<div class="col-xs-1">
-		<span class="order-item-amount">
-			{{ item.amount | number_format(2, '.', ',') }} &euro;
-		</span>
 	</div>
 
 </div>
@@ -96,23 +94,23 @@
 
 <div class="row">
 
-	<div class="col-xs-5">
+	<div class="col-xs-12 col-sm-2">
 		&nbsp;
 	</div>
 
-	<div class="col-xs-2">
-		&nbsp;
-	</div>
-
-	<div class="col-xs-2">
+	<div class="col-xs-4 col-sm-2">
 		<span class="order-amount-label">{{ 'order.shipping' | matra('Shipping') }}</span>
 	</div>
 
-	<div class="col-xs-2">
-		<span class="order-amount-label">{{ order.shipping | matra(maci_orders.shippingsArray[order.shipping].label) }}</span>
+	<div class="col-xs-4 col-sm-2">
+		{% if maci_orders.shippingsArray[order.shipping] is defined %}
+		<span class="order-amount-description">{{ ('order.shippings.' ~ order.shipping) | matra(maci_orders.shippingsArray[order.shipping].label) }}</span>
+		{% else %}
+		<span class="order-amount-description">{{ ('order.shippings.' ~ order.shipping) | matra(order.shipping) }}</span>
+		{% endif %}
 	</div>
 
-	<div class="col-xs-1">
+	<div class="col-xs-4 col-sm-2">
 		<span class="order-amount-value">
 			{% if 0 < order.shippingCost %}
 			{{ order.shippingCost | number_format(2, '.', ',') }} &euro;
@@ -134,23 +132,23 @@
 
 <div class="row">
 
-	<div class="col-xs-5">
+	<div class="col-xs-12 col-sm-2">
 		&nbsp;
 	</div>
 
-	<div class="col-xs-2">
-		&nbsp;
-	</div>
-
-	<div class="col-xs-2">
+	<div class="col-xs-4 col-sm-2">
 		<span class="order-amount-label">{{ 'order.payment' | matra('Payment') }}</span>
 	</div>
 
-	<div class="col-xs-2">
-		<span class="order-amount-label">{{ order.payment | matra(maci_orders.paymentsArray[order.payment].label) }}</span>
+	<div class="col-xs-4 col-sm-2">
+		{% if maci_orders.shippingsArray[order.payment] is defined %}
+		<span class="order-amount-description">{{ ('order.payments.' ~ order.payment) | matra(maci_orders.paymentsArray[order.payment].label) }}</span>
+		{% else %}
+		<span class="order-amount-description">{{ ('order.payments.' ~ order.payment) | matra(order.payment) }}</span>
+		{% endif %}
 	</div>
 
-	<div class="col-xs-1">
+	<div class="col-xs-4 col-sm-2">
 		<span class="order-amount-value">
 			{% if 0 < order.paymentCost %}
 			{{ order.paymentCost | number_format(2, '.', ',') }} &euro;
@@ -170,31 +168,31 @@
 
 <div class="row">
 
-	<div class="col-xs-5">
-		&nbsp;
-	</div>
-
-	<div class="col-xs-2">
+	<div class="col-xs-12 col-sm-2">
 		&nbsp;
 	</div>
 
 	{% if edit is defined and edit %}
 
-	<div class="col-xs-4">
-		<span class="order-amount-label">{{ 'order.subtotal' | matra('SubTotal') }}</span>
+	<div class="col-xs-6 col-sm-4">
+		<h5 class="order-amount-label">{{ 'order.subtotal' | matra('SubTotal') }}</h5>
+	</div>
+
+	<div class="col-xs-6 col-sm-2">
+		<h5 class="order-amount-value">{{ order.subAmount | number_format(2, '.', ',') }} &euro;</h5>
 	</div>
 
 	{% else %}
 
-	<div class="col-xs-4">
-		<span class="order-amount-label">{{ 'order.amount' | matra('Amount') }}</span>
+	<div class="col-xs-8 col-sm-4">
+		<h5 class="order-amount-label">{{ 'order.amount' | matra('Amount') }}</h5>
+	</div>
+
+	<div class="col-xs-4 col-sm-2">
+		<h5 class="order-amount-value">{{ order.amount | number_format(2, '.', ',') }} &euro;</h5>
 	</div>
 
 	{% endif %}
-
-	<div class="col-xs-1">
-		<span class="order-amount-value">{{ order.amount | number_format(2, '.', ',') }} &euro;</span>
-	</div>
 
 </div>
 
