--- a/Resources/views/Default/_gocheckout_signup.html.twig
+++ b/Resources/views/Default/_gocheckout_signup.html.twig
@@ -1,9 +1,10 @@
 
+<div class="container">
 
 <div class="row">
 
 
-<div class="col-md-6">
+<div class="col-xs-12 col-sm-6 col-md-4 col-md-offset-1">
 
 	<h3>{{ 'gocheckout.login' | matra('Login') }}</h3>
 
@@ -16,7 +17,7 @@
 </div>
 
 
-<div class="col-md-6">
+<div class="col-xs-12 col-sm-6 col-md-4 col-md-offset-2">
 
 	<h3>{{ 'gocheckout.new_users' | matra('New Users') }}</h3>
 
@@ -31,3 +32,4 @@
 
 </div>
 
+</div>
