--- a/Resources/views/Default/_gocheckout.html.twig
+++ b/Resources/views/Default/_gocheckout.html.twig
@@ -1,9 +1,10 @@
 
+<div class="container">
 
 <div class="row">
 
 
-<div class="col-md-6">
+<div class="col-xs-12 col-sm-6 col-md-4 col-md-offset-1">
 
 	<h3>{{ 'gocheckout.fast_checkout' | matra('Fast Checkout') }}</h3>
 
@@ -16,7 +17,7 @@
 </div>
 
 
-<div class="col-md-6">
+<div class="col-xs-12 col-sm-6 col-md-4 col-md-offset-2">
 
 	<h3>{{ 'gocheckout.new_users' | matra('New Users') }}</h3>
 
@@ -24,7 +25,7 @@
 
 	<p>{{ 'gocheckout.sign_up.description' | matra("Sign up and get speedy checkout on future purchases.") }}</p>
 
-	<a class="btn btn-success" href="{{ path('maci_user_register') }}">
+	<a class="btn btn-primary" href="{{ path('maci_user_register') }}">
 		{{ 'gocheckout.register_now' | matra('Register Now') }}
 	</a>
 
@@ -39,3 +40,4 @@
 
 </div>
 
+</div>
