--- a/Resources/views/Default/_order_cart_remove_item.html.twig
+++ b/Resources/views/Default/_order_cart_remove_item.html.twig
@@ -5,6 +5,10 @@
     	{{ form_errors(form) }}
 	</div>
 
-    {{ form_rest(form) }}
+    {{ form_row(form._token) }}
+
+    <button id="cart_remove_item_remove" class="btn-danger btn" name="cart_remove_item[remove]" type="submit">
+    	<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+    </button>
 
 </form>
