--- a/Resources/views/Default/_show.html.twig
+++ b/Resources/views/Default/_show.html.twig
@@ -1,31 +1,27 @@
 
 <section class="cart-list">
 
-<div class="row">
-
-	<div class="col-xs-12">
-
-		<h3>{{ 'menu.user.cart' | matra('My Cart') }}</h3>
-
-	</div>
-
-</div>
+<div class="container">
 
 
 {% if order and order.items|length %}
 
 
-<div class="row">
+<div class="row cart-header">
 
-	<div class="col-xs-12 col-sm-6">
-		<h4 class="order-show-title">{{ 'product.cart_title' | matra('') }}</h4>
+	<div class="col-xs-12 col-sm-2">
+		<h3>{{ 'menu.user.cart' | matra('My Cart') }}</h3>
+	</div>
+
+	<div class="col-xs-12 col-sm-5">
+		<h4 class="order-show-title">{{ 'product.cart_title' | matra('Product') }}</h4>
 	</div>
 
 	<div class="col-xs-4 col-sm-2">
 		<h4 class="order-show-title">{{ 'product.price' | matra('Price') }}</h4>
 	</div>
 
-	<div class="col-xs-8 col-sm-4">
+	<div class="col-xs-8 col-sm-3">
 		<h4 class="order-show-title">{{ 'product.quantity' | matra('Quantity') }}</h4>
 	</div>
 
@@ -40,15 +36,15 @@
 {% set id = loop.index0 %}
 {% endif %}
 
-<div class="row">
+<div class="row cart-row">
 
-	<div class="col-xs-4 col-sm-2">
+	<div class="col-xs-12 col-sm-2">
 
 		<img class="img-responsive" src="{{ asset(item.product.preview.webPath | imagine_filter('maci_product_preview_cart')) }}" {% if item.product.description %} title="{{ item.product }}" alt="{{ item.product.description }}" {% else %} alt="{{ item.product }}" {% endif %} />
 
 	</div>
 
-	<div class="col-xs-8 col-sm-4">
+	<div class="col-xs-12 col-sm-5">
 
 		{% if edit is defined and edit %}
 		<a href="{{ path('maci_product_show', { 'id': item.product.id }) }}">
@@ -68,13 +64,13 @@
 
 	</div>
 
-	<div class="col-xs-4 col-sm-2">
+	<div class="col-xs-12 col-sm-2">
 		<span class="order-item-amount">
 			{{ item.amount | number_format(2, '.', ',') }} &euro;
 		</span>
 	</div>
 
-	<div class="col-xs-8 col-sm-4">
+	<div class="col-xs-12 col-sm-3">
 		{% if edit is defined and edit %}
 		{% render(controller('MaciOrderBundle:Default:editCartItem', { 'id': id, 'quantity': item.quantity } )) %}
 		{% render(controller('MaciOrderBundle:Default:removeCartItem', { 'id': id } )) %}
@@ -92,13 +88,9 @@
 
 {% if order.checkShipment and order.shippingCost and not edit %}
 
-<div class="row">
+<div class="row cart-footer">
 
-	<div class="col-xs-12 col-sm-2">
-		&nbsp;
-	</div>
-
-	<div class="col-xs-4 col-sm-2">
+	<div class="col-xs-4 col-sm-3 col-sm-offset-2">
 		<span class="order-amount-label">{{ 'order.shipping' | matra('Shipping') }}</span>
 	</div>
 
@@ -130,13 +122,9 @@
 
 {% if order.paymentCost and edit is not defined or not edit %}
 
-<div class="row">
+<div class="row cart-footer">
 
-	<div class="col-xs-12 col-sm-2">
-		&nbsp;
-	</div>
-
-	<div class="col-xs-4 col-sm-2">
+	<div class="col-xs-4 col-sm-3 col-sm-offset-2">
 		<span class="order-amount-label">{{ 'order.payment' | matra('Payment') }}</span>
 	</div>
 
@@ -166,30 +154,26 @@
 
 {# AMOUNT #}
 
-<div class="row">
-
-	<div class="col-xs-12 col-sm-2">
-		&nbsp;
-	</div>
+<div class="row cart-footer">
 
 	{% if edit is defined and edit %}
 
-	<div class="col-xs-6 col-sm-4">
-		<h5 class="order-amount-label">{{ 'order.subtotal' | matra('SubTotal') }}</h5>
+	<div class="col-xs-6 col-sm-5 col-sm-offset-2">
+		<h4 class="order-amount-label">{{ 'order.subtotal' | matra('SubTotal') }}</h4>
 	</div>
 
 	<div class="col-xs-6 col-sm-2">
-		<h5 class="order-amount-value">{{ order.subAmount | number_format(2, '.', ',') }} &euro;</h5>
+		<h4 class="order-amount-value">{{ order.subAmount | number_format(2, '.', ',') }} &euro;</h4>
 	</div>
 
 	{% else %}
 
-	<div class="col-xs-8 col-sm-4">
-		<h5 class="order-amount-label">{{ 'order.amount' | matra('Amount') }}</h5>
+	<div class="col-xs-8 col-sm-5 col-sm-offset-2">
+		<h4 class="order-amount-label">{{ 'order.amount' | matra('Amount') }}</h4>
 	</div>
 
 	<div class="col-xs-4 col-sm-2">
-		<h5 class="order-amount-value">{{ order.amount | number_format(2, '.', ',') }} &euro;</h5>
+		<h4 class="order-amount-value">{{ order.amount | number_format(2, '.', ',') }} &euro;</h4>
 	</div>
 
 	{% endif %}
@@ -205,6 +189,8 @@
 
 {% endif %}
 
+
+</div>
 
 </section>
 
