--- a/Resources/views/Default/_gocheckout_signup.html.twig
+++ b/Resources/views/Default/_gocheckout_signup.html.twig
@@ -1,7 +1,5 @@
 
-<div class="container">
-
-<div class="row">
+<div class="container-fluid">
 
 
 <div class="col-xs-12 col-sm-6 col-md-4 col-md-offset-1">
@@ -29,7 +27,5 @@
 
 </div>
 
-
-</div>
 
 </div>
