--- a/Resources/views/Default/_show.html.twig
+++ b/Resources/views/Default/_show.html.twig
@@ -1,9 +1,11 @@
 
 <section class="cart-list">
 
-{% if order and order.items|length %}
-
 <h3>{{ 'menu.user.cart' | matra('My Cart') }}</h3>
+
+<div class="container-fluid">
+
+{% if order and order.items|length %}
 
 <div class="row cart-header">
 
@@ -188,6 +190,8 @@
 
 {% endif %}
 
+
+</div>
 
 </section>
 
