--- a/Resources/views/Default/sendform.html.twig
+++ b/Resources/views/Default/sendform.html.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-{% render(controller('MaciOrderBundle:Default:paypalForm', {'order': order})) %}
+{{ render(controller('MaciOrderBundle:Default:paypalForm', {'order': order})) }}
 
 {% endblock %}
 
