--- a/Resources/views/Default/_show.html.twig
+++ b/Resources/views/Default/_show.html.twig
@@ -73,8 +73,8 @@
 
 	<div class="col-xs-12 col-sm-3">
 		{% if edit is defined and edit %}
-		{% render(controller('MaciOrderBundle:Default:editCartItem', { 'id': id, 'quantity': item.quantity } )) %}
-		{% render(controller('MaciOrderBundle:Default:removeCartItem', { 'id': id } )) %}
+		{{ render(controller('MaciOrderBundle:Default:editCartItem', { 'id': id, 'quantity': item.quantity } )) }}
+		{{ render(controller('MaciOrderBundle:Default:removeCartItem', { 'id': id } )) }}
 		{% else %}
 		<span class="order-item-quantity">{{ item.quantity }}</span>
 		{% endif %}
